change background based on midia queries

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+/* variáveis */
 :root {
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
@@ -24,8 +25,10 @@
   --switch-bg-url: url(./assets/sun.svg);
 }
 
+/* body */
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -33,6 +36,7 @@ body * {
   color: var(--text-color);
 }
 
+/* conteiner */
 #conteiner {
   width: 360px;
   margin: 56px auto 0px;
@@ -40,6 +44,7 @@ body * {
   max-width: 588px;
 }
 
+/* profile */
 #profile {
   text-align: center;
   padding: 24px;
@@ -56,6 +61,7 @@ body * {
   margin-top: 8px;
 }
 
+/* switch */
 #switch {
   position: relative;
   width: 64px;
@@ -126,6 +132,7 @@ ul li a:hover {
   border: 1.5px solid var(--text-colorr);
 }
 
+/* social links */
 #sociallinks {
   display: flex;
 
@@ -150,8 +157,20 @@ ul li a:hover {
   background: var(--highlight-color);
 }
 
+/* footer */
 footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+ 
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
